--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 </div>
                 <div class="about__item-text">
                   <div class="about__item-title">About me</div>
-                  <div class="about__item-maintext">Hello again everyone! So, you already know that my name is Gleb. A
-                    little about myself: student, 18 y.o., athlete-football player, I love creativity since childhood, I
-                    live in Donetsk, Ukraine. Why programming? Everything is elementary - I like it, the profession of
+                  <div class="about__item-maintext">Hello again everyone! So, you already know that my name is Alex. A
+                    little about myself: student, 26 y.o., athlete-football player, I love creativity since childhood, I
+                    live in Minsk. Why programming? Everything is elementary - I like it, the profession of
                     the
                     future, thanks to which I can provide myself and fulfill my dream - travel, at the moment I
                     specialize
